# Billiard-Computer-Vision-Sports-Analyzer

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: ball_detection.cpp  ball_detection.hpp  evaluation.cpp  evaluation.hpp  field_detection.cpp  field_detection.hpp  main.cpp  output_data.cpp  output_data.hpp  output_video.cpp  output_video.hpp  segmentation.cpp  segmentation.hpp  visualization.cpp  visualization.hpp
